--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "flags",
     "brazilian states",
     "custom select",
-    "icon select"
+    "icon select",
+    "estados brasileiros",
+    "custom select estados brasileiros com bandeiras"
     ],
     "version": "1.0.0",
     "author": {
